<resources>
    <string name="app_name">Tapping ANDROID</string>
    <string name="navigation_drawer_open">a</string>
    <string name="navigation_drawer_close">b</string>
    <string name="desripcio">Amb la nostra aplicació, tindràs accés a una àmplia gamma d\'informació sobre cada establiment, incloent les tapes que ofereixen, els preus, la ubicació, els horaris, i qualsevol altra informació important.\n\nA més, en aquesta aplicació podràs llegir comentaris i opinions d\'altres usuaris que han visitat algun establiment.\n\nEn resum, aquesta aplicació és una eina imprescindible per a qualsevol amant de les tapes. \n\nComença avui amb la recerca dels millors llocs per tapejar!\n</string>
    <string name="contacte_amb_nosaltres">Contacta amb nosaltres</string>
    <string name="preguntes_freq_ents">Preguntes freqüents</string>
    <string name="noticies">Noticies</string>
    <string name="descomptes">Els meus descomptes</string>
    <string name="preferits">Els meus favorits</string>
    <string name="les_meves_dades">Les meves dades</string>
    <string name="usuari">Usuari</string>
    <string name="pasword">Contrasenya</string>
    <string name="iniciar_sesio">Iniciar sesió</string>
    <string name="registre">Registrar-me</string>
    <string name="registreform">FORMULARI DE REGISTRE DE CONSUMIDOR</string>
    <string name="nom">Nom</string>
    <string name="cognom">Cognom</string>
    <string name="correu_electr_nic">Correu electrònic</string>
    <string name="tel_fon">Telèfon</string>
    <string name="data_de_naixement">Data de naixement</string>
    <string name="instagram"><a href="https://instagram.com/tapping_es?igshidd=YmMyMTA2M2Y">@tapping_es</a></string>
    <string name="tiktok"><a href="https://www.tiktok.com/@tappinges">@tappinges</a></string>
    <string name="tapes">Tapes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar">Editar</string>
    <string name="telefon">Telèfon</string>
    <string name="Guardar">GUARDAR</string>
    <string name="comentaris">Comentaris</string>
    <string name="afegir_com">Afegir comentari</string>
    <string name="els_meus_locals">Els meus locals</string>
    <string name="les_meves_tapes">Les meves tapes</string>
    <string name="xat">Xat</string>
    <string name="enviar">Enviar</string>
    <string name="tapping">TAPPING</string>
    <string name="escriu_el_teu_misatge_aqui">Escriu el teu misatge aqui</string>
    <string name="tencar_sesio">Tencar sessió</string>
    <string name="modificar_contrasenya">Modificar contrasenya</string>
    <string name="puntuacio">Puntuacio</string>
    <string name="escriu_el_teu_comentari_aqu">Escriu el teu comentari aquí</string>
    <string name="enviar_opini">Enviar opinió</string>
    <string name="tappinges_gmail_com">tappinges@gmail.com</string>
    <string name="enviar_a">Enviar a:</string>
    <string name="assumpte">Assumpte:</string>
    <string name="assumpte_">Assumpte</string>
    <string name="misatge">Misatge:</string>
    <string name="contingut">Contingut</string>
    <string name="enviar_misatge">Enviar misatge</string>
</resources>