<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_view"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/btn_dades"
            android:icon="@drawable/usuario"
            android:title="@string/les_meves_dades"
            />
        <item
            android:id="@+id/btn_preferits"
            android:icon="@drawable/favorito"
            android:title="@string/preferits" />
        <item
            android:id="@+id/btn_descompte"
            android:icon="@drawable/etiqueta"
            android:title="@string/descomptes" />
        <item
            android:id="@+id/btn_locals"
            android:icon="@drawable/ic_local"
            android:title="@string/els_meus_locals"
            android:visible="false"/>
        <item
            android:id="@+id/btn_tapes"
            android:icon="@drawable/ic_tapes"
            android:title="@string/les_meves_tapes"
            android:visible="false"/>
        <item
            android:id="@+id/btn_comentaris"
            android:icon="@drawable/ic_comentaris"
            android:title="@string/comentaris"
            android:visible="false"/>

        <item
            android:id="@+id/btn_noticies"
            android:icon="@drawable/news"
            android:title="@string/noticies" />
    </group>

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
    </group>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/btn_preguntes"
                    android:icon="@drawable/pregunta"
                    android:title="@string/preguntes_freq_ents" />
                <item
                    android:id="@+id/btn_xat"
                    android:icon="@drawable/ic_xat"
                    android:title="@string/xat"/>
                    <!--android:visible="false"-->

                <item
                    android:id="@+id/btn_contacte"
                    android:icon="@drawable/letra"
                    android:title="@string/contacte_amb_nosaltres" />
            </group>
        </menu>
    </item>


</menu>