<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tappingandroid.GestioDeRegistres.IniciSessio">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="330dp"
                android:layout_height="330dp"
                android:src="@drawable/logotiptapping"/>

            <EditText
                android:id="@+id/et_usuari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuari" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pasword"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesio"
                android:layout_margin="10dp"
                android:background="@drawable/esquines_rodones_orange"/>

            <Button
                android:id="@+id/btn_registre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registre"
                android:layout_margin="10dp"
                android:background="@drawable/esquines_rodones_orange"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>