<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="407dp"
        android:layout_height="272dp"
        android:layout_marginTop="128dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/correo"
                android:layout_width="87dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/letra" />


            <TextView
                android:id="@+id/et_cognom"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/tappinges_gmail_com" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/telefon_contacte"
                android:layout_width="87dp"
                android:layout_height="48dp"
                app:srcCompat="@android:drawable/stat_sys_phone_call_forward" />


            <TextView
                android:id="@+id/contacte_te"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="913765432" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/insta"
                android:layout_width="87dp"
                android:layout_height="47dp"
                app:srcCompat="@drawable/insta" />


            <TextView
                android:id="@+id/contacte_insta"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColorLink="@color/black"
                android:text="@string/instagram" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tiktok"
                android:layout_width="87dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/tiktok" />


            <TextView
                android:id="@+id/contacte_tiktok"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tiktok" />
        </LinearLayout>





    </LinearLayout>

    <Button
        android:id="@+id/btn_mensaje"
        android:layout_width="194dp"
        android:layout_height="47dp"
        android:layout_marginTop="104dp"
        android:text="Enviar Missatge"
        android:background="@drawable/esquines_rodones_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="288dp"
        android:layout_height="38dp"
        android:layout_marginTop="44dp"
        android:text="CONTACTA AMB NOSALTRES"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
